fixes, updates, added switch for sharepoint and exchange deployment

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /workplace/bin/Debug/staging/workplace
+.vs/workplace/v16
+.vs
+*.zip
+workplace/obj
